@startuml
interface HttpRequestHandler {
    handle(request, context)
}

class MethodHandler {
    handle(request, context)
    #handleGet(request, context)
    #handlePost(request, context)
    #handlePut(request, context)
    #handleDelete(request, context)
}

class StaticFileHandler {
    handle(request, context)
}

class UserImplementedHandler {
    handle(request, context)
}

MethodHandler -up-|> HttpRequestHandler
StaticFileHandler -up-|> HttpRequestHandler
UserImplementedHandler -up-|> HttpRequestHandler
@enduml